--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     </div>
 
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-<img id="leaf" src="images/leaf.png">
+<img id="leaf" src="/images/
+leaf.png">
     </div>
 </div>
 </div>
