--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 <nav>
 <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#skills">About</a></li>
     <li><a href="#">Projects</a></li>
     <li><a href="#">Contact</a></li>
     <li id="nav-icons"><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-envelope-o" aria-hidden="true"></i></li> 
@@ -65,8 +65,8 @@
 
        
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#skills">About</a></li>
             <li><a href="#">Projects</a></li>
             <li><a href="#">Contact</a></li>
             <li><i class="fa fa-github" aria-hidden="true"></i><i class="fa fa-envelope-o" aria-hidden="true"></i></li> 
@@ -106,10 +106,8 @@
     
 
 
-
-
     <!-- start of skills and experience section -->
-
+<hr>
     <section id="skills">
 <h1>About me</h1>
 
