--- a/index.html
+++ b/index.html
@@ -107,7 +107,12 @@
 
 
     <!-- start of skills and experience section -->
-<hr>
+<div class="container d-flex justify-content-center pt-5">
+   <i style="text-align: center; color:white" class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
+</div>
+
+
+
     <section id="skills">
 <h1>About me</h1>
 
@@ -160,6 +165,12 @@
     <!-- start of languages and frameworks utilized section -->
 
     <section id="frameworks">
+
+        <div class="container d-flex justify-content-center pt-5">
+            <i style="text-align: center; color:black" class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i>
+         </div>
+
+
         <h1><span>Frameworks</span> & <span>Languages</span> I utilize</h1>
 
 
